# stereo_visual_odometry_ros2

./: CMakeLists.txt  README.md  package.xml
config/stereo/d435/: extrinsics.yaml  intrinsics.yaml  user_parameters.yaml
core/: CMakeLists.txt  orb_extractor.cc  orb_extractor.h  stereo_visual_odometry.cpp  stereo_visual_odometry.h  types.h
core/optimization/: options.h  pose_only_optimizer.h  summary.cc  summary.h
core/utility/: reconstructor.cc  reconstructor.h
ros2/: CMakeLists.txt
ros2/launch/: stereo_node.launch.py
ros2/wrapper/: stereo_visual_odometry_node.cpp  stereo_visual_odometry_ros2.cpp  stereo_visual_odometry_ros2.h
